--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
         "vite": "^6.0.11"
     },
     "dependencies": {
+        "@alpinejs/collapse": "^3.14.9",
         "boxicons": "^2.1.4",
         "chart.js": "^4.4.8"
     }
