--- a/package.json
+++ b/package.json
@@ -2,8 +2,9 @@
     "private": true,
     "type": "module",
     "scripts": {
-        "build": "vite build --output public",
-        "dev": "vite"
+        "build": "vite build",
+        "dev": "vite",
+        "vercel-build": "composer install --no-dev && php artisan config:cache && npm run build"
     },
     "devDependencies": {
         "@tailwindcss/forms": "^0.5.2",
