--- a/package.json
+++ b/package.json
@@ -3,8 +3,7 @@
     "type": "module",
     "scripts": {
         "build": "vite build",
-        "dev": "vite",
-        "vercel-build": "rm -rf .vercel && composer install --no-dev && php artisan config:cache && npm run build"
+        "dev": "vite"
     },
     "devDependencies": {
         "@tailwindcss/forms": "^0.5.2",
